Change "it" to a specific name

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -32,7 +32,7 @@ generic than `NormalizerNFKC*`.
 version. For example, `NormalizerNFKC("version", "15.0.0")` equals to
 `NormalizerNFKC150`.
 
-`NormalizerNFKC*` are deprecated by it. You should use
+`NormalizerNFKC*` are deprecated by {doc}`/reference/normalizers/normalizer_nfkc`. You should use
 {doc}`/reference/normalizers/normalizer_nfkc` for newly written applications.
 
 {doc}`/reference/normalizers/normalizer_nfkc` uses Unicode 16.0.0 by default.
@@ -43,7 +43,7 @@ It's similar to existing `TokenFilterNFKC*` such as
 {doc}`/reference/token_filters/token_filter_nfkc150`. But it's based
 on {doc}`/reference/normalizers/normalizer_nfkc`. So you can specify Unicode version as {ref}`normalizer-nfkc-version`.
 
-`TokenFilterNFKC*` are deprecated by it. You should use
+`TokenFilterNFKC*` are deprecated by {doc}`/reference/token_filters/token_filter_nfkc`. You should use
 {doc}`/reference/token_filters/token_filter_nfkc` for newly written applications.
 
 {doc}`/reference/token_filters/token_filter_nfkc` uses Unicode 16.0.0 by default.
