package: update version info to 14.1.3 (2025-01-29)

--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.1.3-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Abe Tomoaki <abe@clear-code.com>  Wed, 29 Jan 2025 03:03:15 -0000
+
 groonga (14.1.2-1) unstable; urgency=low
 
   * New upstream release.
