--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Sutou Kouhei <kou@clear-code.com>  Fri, 07 Feb 2025 06:08:24 -0000
+
 groonga (14.1.3-1) unstable; urgency=low
 
   * New upstream release.
