docs: add 15.0.1 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,17 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-1)=
+## Release 15.0.1 - 2025-02-19
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### [{doc}`/install/ubuntu`] Dropped support for Ubuntu 20.04 (Focal Fossa)
+
+We dropped support for for Ubuntu 20.04 because it reached EOL at May 2025.
+
+<!-- prettier-ignore-start -->
 (release-15-0-0)=
 ## Release 15.0.0 - 2025-02-09
 <!-- prettier-ignore-end -->
