--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -9,7 +9,8 @@
 
 #### [{doc}`/install/ubuntu`] Dropped support for Ubuntu 20.04 (Focal Fossa)
 
-We dropped support for for Ubuntu 20.04 because it reached EOL at May 2025.
+Ubuntu 20.04 will reach EOL in May 2025, so support for it has been dropped
+starting with this release.
 
 <!-- prettier-ignore-start -->
 (release-15-0-0)=
