--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,18 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-1)=
+## Release 15.0.1 - 2025-02-20
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### [{doc}`/install/ubuntu`] Dropped support for Ubuntu 20.04 (Focal Fossa)
+
+Ubuntu 20.04 will reach EOL in May 2025, so support for it has been dropped
+starting with this release.
+
+<!-- prettier-ignore-start -->
 (release-15-0-0)=
 ## Release 15.0.0 - 2025-02-09
 <!-- prettier-ignore-end -->
