--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Abe Tomoaki <abe@clear-code.com>  Thu, 20 Feb 2025 02:41:55 -0000
+
 groonga (15.0.0-1) unstable; urgency=low
 
   * New upstream release.
