docs: add 15.0.2 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,22 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-2)=
+## Release 15.0.2 - 2025-02-21
+<!-- prettier-ignore-end -->
+
+### Fixes
+
+#### {ref}`offline-index-construction`: Fixed a bug that Groonga may ingnore normalizer options of target index when offline index construction execute parallel
+
+If happend when:
+
+- Execute offline index construction with parallel
+- Use Normalizer/Tokenizer/TokenFilter options
+
+However, if we use NormalizerTable, Groonga occurs error.
+
+<!-- prettier-ignore-start -->
 (release-15-0-1)=
 ## Release 15.0.1 - 2025-02-20
 <!-- prettier-ignore-end -->
