--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -7,14 +7,16 @@
 
 ### Fixes
 
-#### {ref}`offline-index-construction`: Fixed a bug that Groonga may ingnore normalizer options of target index when offline index construction execute parallel
+#### {doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug
+
+Groonga may ingnore normalizer/tokenizer/tokenfilter options of target index when offline index construction execute parallel
 
 If happend when:
 
 - Execute offline index construction with parallel
 - Use Normalizer/Tokenizer/TokenFilter options
 
-However, if we use NormalizerTable, Groonga occurs error.
+However, if we use NormalizerTable, offline index construction occurs error by this issue.
 
 <!-- prettier-ignore-start -->
 (release-15-0-1)=
