Fix wrong English
Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -9,7 +9,7 @@
 
 #### {doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug
 
-Groonga may ingnore normalizer/tokenizer/tokenfilter options of target index when offline index construction execute parallel
+Groonga may ignore options of normalizers, tokenizer and/or token filters in the target index when offline index construction is executed in parallel.
 
 If happend when:
 
