Fix wrong English
Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -11,7 +11,7 @@
 
 Groonga may ignore options of normalizers, tokenizer and/or token filters in the target index when offline index construction is executed in parallel.
 
-If happend when:
+It may happen when:
 
 - Execute offline index construction with parallel
 - Use Normalizer/Tokenizer/TokenFilter options
