Fix wrong English
Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -13,7 +13,7 @@ Groonga may ignore options of normalizers, tokenizer and/or token filters in the
 
 It may happen when:
 
-- Execute offline index construction with parallel
+- Execute offline index construction in parallel
 - Use Normalizer/Tokenizer/TokenFilter options
 
 However, if we use NormalizerTable, offline index construction occurs error by this issue.
