--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -14,7 +14,7 @@ Groonga may ignore options of normalizers, tokenizer and/or token filters in the
 It may happen when:
 
 - Execute offline index construction in parallel
-- Use Normalizer/Tokenizer/TokenFilter options
+- Use {doc}`/reference/normalizers`/{doc}`/reference/tokenizers`/{doc}`/reference/token_filters` options
 
 However, if we use NormalizerTable, offline index construction occurs error by this issue.
 
