Use more suitable English

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -11,10 +11,9 @@
 
 Groonga may ignore options of normalizers, tokenizer and/or token filters in the target index when offline index construction is executed in parallel.
 
-It may happen when:
-
-- Execute offline index construction in parallel
-- Use {doc}`/reference/normalizers`/{doc}`/reference/tokenizers`/{doc}`/reference/token_filters` options
+This issue may occur when:
+- Offline index construction is executed in parallel.
+- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, or {doc}`/reference/token_filters` options are used.
 
 However, if we use NormalizerTable, offline index construction occurs error by this issue.
 
