--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -9,11 +9,11 @@
 
 #### {doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug
 
-Groonga may ignore options of normalizers, tokenizer and/or token filters in the target index when offline index construction is executed in parallel.
+Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel.
 
 This issue may occur when:
 - Offline index construction is executed in parallel.
-- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, or {doc}`/reference/token_filters` options are used.
+- Normalizer, Tokenizer, or TokenFilter options are used.
 
 However, if we use NormalizerTable, offline index construction occurs error by this issue.
 
