Write in more detail
Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -15,7 +15,7 @@ This issue may occur when:
 - Offline index construction is executed in parallel.
 - Normalizer, Tokenizer, or TokenFilter options are used.
 
-However, if we use NormalizerTable, offline index construction occurs error by this issue.
+If {ref}:`${NormalizerTable link}` is used and this happens, the offline index construction is failed. Because {ref}:`${NormalizerTable link}` has a required parameter. If options are ignored, the required parameter is missing.
 
 <!-- prettier-ignore-start -->
 (release-15-0-1)=
