Fix broken links

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -15,7 +15,7 @@ This issue may occur when:
 - Offline index construction is executed in parallel.
 - Normalizer, Tokenizer, or TokenFilter options are used.
 
-If {ref}:`${NormalizerTable link}` is used and this happens, the offline index construction is failed. Because {ref}:`${NormalizerTable link}` has a required parameter. If options are ignored, the required parameter is missing.
+If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing.
 
 <!-- prettier-ignore-start -->
 (release-15-0-1)=
