--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -26,20 +26,20 @@ msgstr "修正"
 msgid "{doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug"
 msgstr "{doc}`/reference/columns/index`: {ref}`offline-index-construction` の問題を修正"
 
-msgid "Groonga may ingnore normalizer/tokenizer/tokenfilter options of target index when offline index construction execute parallel"
-msgstr "静的なインデックス構築を並列で実行しているときにGroongaがノーマライザー/トークナイザー/トークンフィルターのオプションを無視することがある問題を修正しました。"
+msgid "Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel."
+msgstr "静的なインデックス構築を並列で実行しているときにGroongaが{doc}`/reference/normalizers`、{doc}`/reference/tokenizers`、{doc}`/reference/token_filters`のオプションを無視することがある問題を修正しました。"
 
-msgid "If happend when:"
-msgstr "次の場合に発生していました。"
+msgid "This issue may occur when:"
+msgstr "次の場合に発生することがあります:"
 
-msgid "Execute offline index construction with parallel"
-msgstr "静的なインデックス構築を並列実行する"
+msgid "Offline index construction is executed in parallel."
+msgstr "静的なインデックス構築を並列実行する。"
 
-msgid "Use Normalizer/Tokenizer/TokenFilter options"
-msgstr "ノーマライザー/トークナイザー/トークンフィルターのオプションを使っている"
+msgid "Normalizer, Tokenizer, or TokenFilter options are used."
+msgstr "ノーマライザー、トークナイザー、トークンフィルターのオプションを使っている。"
 
-msgid "However, if we use NormalizerTable, offline index construction occurs error by this issue."
-msgstr "ただし、NormalizerTableを使っている場合は、この問題によって静的なインデックス構築がエラーになります。"
+msgid "If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing."
+msgstr "{doc}`/reference/normalizers/normalizer_table` を使っていてこの問題が発生した場合、静的なインデックス構築は失敗します。 {doc}`/reference/normalizers/normalizer_table` は必須パラメータを持っていますが、オプションが無視されると必須パラメータが失われてしまうためです。"
 
 msgid "Release 15.0.1 - 2025-02-20"
 msgstr "15.0.1リリース - 2025-02-20"
