Use more suitable English
Co-authored-by: Sutou Kouhei <kou@cozmixng.org>

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -7,7 +7,7 @@
 
 ### Fixes
 
-#### {doc}`/reference/columns/index`: Fixed an {ref}`offline-index-construction` bug
+#### {ref}`offline-index-construction`: Fixed a bug that options may be ignored in parallel build
 
 Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel.
 
