--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -14,7 +14,7 @@ Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/to
 This issue may occur when:
 
 - Offline index construction is executed in parallel.
-- Normalizer, Tokenizer, or TokenFilter options are used.
+- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, and/or {doc}`/reference/token_filters` options are used.
 
 If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing.
 
