--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -17,6 +17,30 @@ msgstr ""
 msgid "News - 15 series"
 msgstr "お知らせ - 15系"
 
+msgid "Release 15.0.2 - 2025-02-21"
+msgstr "15.0.2リリース - 2025-02-21"
+
+msgid "Fixes"
+msgstr "修正"
+
+msgid "{ref}`offline-index-construction`: Fixed a bug that options may be ignored in parallel construction"
+msgstr "{ref}`offline-index-construction`: 並列に構築するとオプションを無視することがある問題を修正"
+
+msgid "Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel."
+msgstr "静的なインデックス構築を並列で実行しているときにGroongaが{doc}`/reference/normalizers`、{doc}`/reference/tokenizers`、{doc}`/reference/token_filters`のオプションを無視することがある問題を修正しました。"
+
+msgid "This issue may occur when:"
+msgstr "次の場合に発生することがあります。"
+
+msgid "Offline index construction is executed in parallel."
+msgstr "静的なインデックス構築を並列実行する。"
+
+msgid "{doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, and/or {doc}`/reference/token_filters` options are used."
+msgstr "{doc}`/reference/normalizers`、 {doc}`/reference/tokenizers`、 {doc}`/reference/token_filters` のオプションを使っている。"
+
+msgid "If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing."
+msgstr "{doc}`/reference/normalizers/normalizer_table` を使っていてこの問題が発生した場合、静的なインデックス構築は失敗します。 {doc}`/reference/normalizers/normalizer_table` には必須の引数がありますが、オプションが無視されると必須の引数が指定されていないことになるためです。"
+
 msgid "Release 15.0.1 - 2025-02-20"
 msgstr "15.0.1リリース - 2025-02-20"
 
