--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,24 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-2)=
+## Release 15.0.2 - 2025-02-21
+<!-- prettier-ignore-end -->
+
+### Fixes
+
+#### {ref}`offline-index-construction`: Fixed a bug that options may be ignored in parallel construction
+
+Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel.
+
+This issue may occur when:
+
+- Offline index construction is executed in parallel.
+- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, and/or {doc}`/reference/token_filters` options are used.
+
+If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing.
+
+<!-- prettier-ignore-start -->
 (release-15-0-1)=
 ## Release 15.0.1 - 2025-02-20
 <!-- prettier-ignore-end -->
