--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Fri, 21 Feb 2025 09:38:55 -0000
+
 groonga (15.0.1-1) unstable; urgency=low
 
   * New upstream release.
